<?xml version="1.0"?>
<package>
  <name>wifibot_controller</name>
  <version>0.0.0</version>
  <description>The motion controller package for wifibot in gazebo simulations</description>
  <maintainer email="qiuzhaopeng@gmail.com">Zhaopeng QIU</maintainer>

  <license>BSD</license>

  <author email="qiuzhaopeng@gmail.com">Zhaopeng QIU</author>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>gazebo_plugins</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>bullet</build_depend> 
  <build_depend>urdf</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>gazebo_plugins</run_depend> 
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tutorial_gazebo</run_depend> 
  <run_depend>bullet</run_depend> 


  <export>
    <cpp cflags="-I${prefix}/cfg/cpp -I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib" />
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
